[TASK] Code cleanup and minor fixes

--- a/Resources/Private/Templates/TranslationFile/List.html
+++ b/Resources/Private/Templates/TranslationFile/List.html
@@ -27,7 +27,7 @@
 							<td>
 								<form class="l10n-translation-translation">
 									<input type="hidden" name="key" value="{translation.translationKey}" />
-									<input type="text" name="target" value="{translation.translationTarget}" />
+									<input type="text" name="target" value="{translation.translationTarget}" size="50" />
 									<input type="hidden" name="path" value="{translationFile.relativePath}" />
 									<input type="hidden" name="language" value="{l10nTranslationFile.language}" />
 									<input type="submit" value="Update" class="btn btn-default" />
