[TASK] Search case insensitive by default

--- a/Resources/Private/Templates/TranslationFile/List.html
+++ b/Resources/Private/Templates/TranslationFile/List.html
@@ -43,9 +43,9 @@
 			<div class="col-sm-6">
 				<h2><f:translate key="search.extendedParameters" /></h2>
 				<div class="form-group row checkbox">
-					<label for="caseInSensitive" class="col-sm-6 col-sm-offset-1">
-						<f:form.checkbox id="caseInSensitive" property="caseInSensitive" value="1"/>
-						<f:translate key="tx_l10ntranslator_domain_model_search.caseInSensitive" />
+					<label for="caseSensitive" class="col-sm-6 col-sm-offset-1">
+						<f:form.checkbox id="caseSensitive" property="caseSensitive" value="1"/>
+						<f:translate key="tx_l10ntranslator_domain_model_search.caseSensitive" />
 					</label>
 				</div>
 				<div class="form-group row checkbox">
