--- a/Resources/Private/Templates/TranslationFile/List.html
+++ b/Resources/Private/Templates/TranslationFile/List.html
@@ -60,6 +60,12 @@
 						<f:translate key="tx_l10ntranslator_domain_model_search.includeSource" />
 					</label>
 				</div>
+				<div class="form-group row checkbox">
+					<label for="includeKey" class="col-sm-6 col-sm-offset-1">
+						<f:form.checkbox id="includeKey" property="includeKey" value="1"/>
+						<f:translate key="tx_l10ntranslator_domain_model_search.includeKey" />
+					</label>
+				</div>
 			</div>
 		</div>
 
