--- a/Resources/Private/Partials/TranslationFile/TableRow.html
+++ b/Resources/Private/Partials/TranslationFile/TableRow.html
@@ -19,9 +19,7 @@
 					</span>
 					<self:ifStringContainsLineBreak input="{translation.translationSource}">
 						<f:then>
-							<textarea class="translation-target" name="target" rows="5" cols="47">
-								{translation.translationTarget}
-							</textarea>
+							<textarea class="translation-target" name="target" rows="5" cols="47">{translation.translationTarget}</textarea>
 						</f:then>
 						<f:else>
 							<input type="text" class="translation-target" name="target" value="{translation.translationTarget}" size="47" />
@@ -32,9 +30,7 @@
 				<f:else>
 					<self:ifStringContainsLineBreak input="{translation.translationSource}">
 						<f:then>
-							<textarea class="translation-target" name="target" rows="5" cols="50">
-								{translation.translationTarget}
-							</textarea>
+							<textarea class="translation-target" name="target" rows="5" cols="50">{translation.translationTarget}</textarea>
 						</f:then>
 						<f:else>
 							<input class="translation-target" type="text" name="target" value="{translation.translationTarget}" size="50" />
