--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -1,14 +1,6 @@
-
-<f:be.container
-		includeRequireJsModules="{0: 'TYPO3/CMS/L10nTranslator/L10nTranslator'}"
->
-	<div class="typo3-fullDoc">
-
-		<div id="typo3-docbody">
-			<div id="typo3-inner-docbody">
-				<f:flashMessages />
-				<f:render section="content" />
-			</div>
-		</div>
-	</div>
-</f:be.container>
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+<div id="l10n-translator">
+	<f:flashMessages />
+	<f:render section="content" />
+</div>
+</html>
