--- a/Resources/Private/Templates/TranslationFile/List.html
+++ b/Resources/Private/Templates/TranslationFile/List.html
@@ -1,100 +1,42 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<f:layout name="Default" />
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true"
+	  data-namespace-typo3-fluid="true">
+<f:layout name="Default"/>
 
 <f:section name="content">
 
-	<f:flashMessages />
-	<f:render partial="FormErrors" />
-	<f:form class="form-horizontal" action="list"  controller="TranslationFile" method="POST" name="search" object="{search}">
-
-		<div class="row">
-			<div class="col-sm-6">
-				<h2><f:translate key="search.heading" /></h2>
-				<div class="form-group row">
-					<label for="searchString" class="col-sm-4 control-label">
-						<f:translate key="tx_l10ntranslator_domain_model_search.search_string" />
-					</label>
-					<div class="col-sm-6">
-						<f:form.textfield class="form-control" id="searchString" property="searchString" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label for="language" class="col-sm-4 control-label">
-						<f:translate key="tx_l10ntranslator_domain_model_search.language" />
-					</label>
-					<div class="col-sm-6">
-						<f:form.select class="form-control" id="language" options="{languages}" property="language" prependOptionLabel="{f:translate(key: 'search.all')}" prependOptionValue="" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label for="l10nFile" class="col-sm-4 control-label">
-						<f:translate key="tx_l10ntranslator_domain_model_search.l10nFile" />
-					</label>
-					<div class="col-sm-6">
-						<f:form.select id="l10nFile" class="form-control" property="l10nFile" options="{l10nFiles}" prependOptionLabel="{f:translate(key: 'search.all')}" prependOptionValue=""/>
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-sm-offset-4 col-sm-6">
-						<f:form.submit value="{f:translate(key: 'tx_l10ntranslator_domain_model_search')}" class="btn btn-default"/>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<h2><f:translate key="search.extendedParameters" /></h2>
-				<div class="form-group row checkbox">
-					<label for="caseSensitive" class="col-sm-6 col-sm-offset-1">
-						<f:form.checkbox id="caseSensitive" property="caseSensitive" value="1"/>
-						<f:translate key="tx_l10ntranslator_domain_model_search.caseSensitive" />
-					</label>
-				</div>
-				<div class="form-group row checkbox">
-					<label for="exactMatch" class="col-sm-6 col-sm-offset-1">
-						<f:form.checkbox id="exactMatch" property="exactMatch" value="1"/>
-						<f:translate key="tx_l10ntranslator_domain_model_search.exactMatch" />
-					</label>
-				</div>
-				<div class="form-group row checkbox">
-					<label for="includeSource" class="col-sm-6 col-sm-offset-1">
-						<f:form.checkbox id="includeSource" property="includeSource" value="1"/>
-						<f:translate key="tx_l10ntranslator_domain_model_search.includeSource" />
-					</label>
-				</div>
-				<div class="form-group row checkbox">
-					<label for="includeKey" class="col-sm-6 col-sm-offset-1">
-						<f:form.checkbox id="includeKey" property="includeKey" value="1"/>
-						<f:translate key="tx_l10ntranslator_domain_model_search.includeKey" />
-					</label>
-				</div>
-			</div>
-		</div>
-
-	</f:form>
+	<f:flashMessages/>
+	<f:render partial="FormErrors"/>
+	<f:render partial="SearchMenu" arguments="{_all}"/>
 
 	<f:if condition="{translationFiles}">
-		<table class="table">
-			<thead>
-			<tr>
+		<div class="table-responsive">
+			<table class="table table-striped table-hover">
+				<thead>
+				<tr>
 				<th><f:translate key="tx_l10ntranslator_domain_model_translation.translation_key" /></th>
 				<th><f:translate key="tx_l10ntranslator_domain_model_translation.language" /></th>
 				<th><f:translate key="tx_l10ntranslator_domain_model_translation.translation_source" /></th>
 				<th><f:translate key="tx_l10ntranslator_domain_model_translation.translation_target" /></th>
-			</tr>
-			</thead>
-			<tbody>
-			<f:for each="{translationFiles}" as="translationFile">
-				<f:for each="{translationFile.l10nTranslationFiles}" as="l10nTranslationFile">
-					<f:for each="{l10nTranslationFile.matchedTranslations}" as="translation">
-						<f:render partial="TranslationFile/TableRow" arguments="{translation: translation, l10nTranslationFile: l10nTranslationFile, translationFile: translationFile}" />
-					</f:for>
-					<f:for each="{l10nTranslationFile.matchedMissingTranslations}" as="translation">
-						<f:render partial="TranslationFile/TableRow" arguments="{translation: translation, l10nTranslationFile: l10nTranslationFile, translationFile: translationFile, missing: 1}" />
+				</tr>
+				</thead>
+				<tbody>
+				<f:for each="{translationFiles}" as="translationFile">
+					<f:for each="{translationFile.l10nTranslationFiles}" as="l10nTranslationFile">
+						<f:for each="{l10nTranslationFile.matchedTranslations}" as="translation">
+							<f:render partial="TranslationFile/TableRow"
+									  arguments="{translation: translation, l10nTranslationFile: l10nTranslationFile, translationFile: translationFile}"/>
+						</f:for>
+						<f:for each="{l10nTranslationFile.matchedMissingTranslations}" as="translation">
+							<f:render partial="TranslationFile/TableRow"
+									  arguments="{translation: translation, l10nTranslationFile: l10nTranslationFile, translationFile: translationFile, missing: 1}"/>
+						</f:for>
 					</f:for>
 				</f:for>
-			</f:for>
-			</tbody>
-		</table>
+				</tbody>
+			</table>
+		</div>
 	</f:if>
+
 
 </f:section>
 </html>
