--- a/Resources/Private/Partials/TranslationFile/TableRow.html
+++ b/Resources/Private/Partials/TranslationFile/TableRow.html
@@ -13,22 +13,19 @@
 			<f:if condition="{missing}">
 				<f:then>
 					<span class="t3js-icon icon icon-size-small icon-state-default icon-status-dialog-error" data-identifier="status-dialog-error">
-						<span class="icon-markup">
-							<span class="icon-unify"><i class="fa fa-exclamation-circle"></i></span>
-						</span>
+						<span class="icon-markup"><i class="fa fa-exclamation-circle"></i></span>
 					</span>
-					<self:ifShouldBeTextArea input="{translation.translationSource}">
+					<self:ifShouldBeTextArea condition="{translation.translationSource}">
 						<f:then>
-							<textarea class="translation-target" name="target" rows="5" cols="47">{translation.translationTarget}</textarea>
+							<textarea class="translation-target" name="target" rows="5" cols="47" placeholder="{f:translate(key: 'targetNotAddedYet')}">{translation.translationTarget}</textarea>
 						</f:then>
 						<f:else>
-							<input type="text" class="translation-target" name="target" value="{translation.translationTarget}" size="47" />
+							<input type="text" class="translation-target" name="target" value="{translation.translationTarget}" size="47" placeholder="{f:translate(key: 'targetNotAddedYet')}"/>
 						</f:else>
 					</self:ifShouldBeTextArea>
-
 				</f:then>
 				<f:else>
-					<self:ifShouldBeTextArea input="{translation.translationSource}">
+					<self:ifShouldBeTextArea condition="{translation.translationSource}">
 						<f:then>
 							<textarea class="translation-target" name="target" rows="5" cols="50">{translation.translationTarget}</textarea>
 						</f:then>
