[TASK] unmark the tick in exact match
if the search ist coming from the source language link in the frontend
the tick in the search fields are not set.

--- a/Resources/Private/Partials/TranslationFile/TableRow.html
+++ b/Resources/Private/Partials/TranslationFile/TableRow.html
@@ -2,7 +2,7 @@
 <tr>
 	<td><f:format.crop maxCharacters="200">{translation.translationKey}</f:format.crop></td>
 	<td>
-		<f:link.action action="list" arguments="{search: {exactMatch: 1, l10nFile: translationFile.relativePath, searchString: translation.translationSource, includeSource: 1}}">
+		<f:link.action action="list" arguments="{search: {exactMatch: 1, searchString: translation.translationSource, includeSource: 1, onlyOneTimeExactSearch: 1}}">
 			<f:format.nl2br>{translation.translationSource}</f:format.nl2br>
 		</f:link.action>
 	</td>
