[BUGFIX] Repair input/textare switch

--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -1,4 +1,9 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+<style>
+	#l10n-translator .l10n-translation-translation .form-control {
+		width: 80%;
+	}
+</style>
 <div id="l10n-translator">
 	<f:flashMessages />
 	<f:render section="content" />
